--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,6 @@ authors = ["Antoine <antoine.desbois@usherbrooke.ca>"]
 
 [dependencies]
 image = "0.12.3"
+nalgebra = "0.11"
+alga = "*"
+rand = "*"
